--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,8 +3,7 @@
 name: CI
 
 # Controls when the action will run. 
-on:
-  [ push ]
+on: push
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
