--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "discord.js": "^12.5.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "i18next": "^19.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
