--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Unit test
         run: |
-          yarn,
-          yarn test,
+          npm install,
+          npm run test,
           rm -R node_modules
