--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       # Runs a set of commands using the runners shell
       - name: Unit test
+        before_script:
+          cd ..
         run: |
           npm install
           npm run test
