--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,9 +15,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a set of commands using the runners shell
-      - name: Unit test
-        run: |
-          cd ..
-          npm install
-          npm run test
-          rm -R node_modules
+      - name: Install dependencies
+        run: npm install
+
+      -name: Remove dependencies
+        run: rm -rf node_modules
+          
