--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install dependencies
         run: npm install
+      - name: Unit test
+        run: npm test
       - name: Remove dependencies
         run: rm -rf node_modules
           
