--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,9 +16,12 @@ jobs:
     steps:
       # Runs a set of commands using the runners shell
       - name: Install dependencies
-        run: npm install
+        run: 
+           cd ../../../../../
+          npm install
       - name: Unit test
-        run: npm test
+        run: 
+          npm test
       - name: Remove dependencies
         run: rm -rf node_modules
           
