--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,10 +15,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a set of commands using the runners shell
-      - name: Install dependencies
+      - name: Unit test
         run: |
-          cd ../../../../../
-          npm install
           npm test
-          rm -rf node_modules
           
