--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,7 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. 
-on: push
- 
+on: [push]
+
 jobs:
   test:
     name: Test on node ${{ matrix.node }} and ${{ matrix.os }}
@@ -17,7 +14,8 @@ jobs:
         os: [ubuntu-latest, macOS-latest, windows-latest]
 
     steps:
-      - uses: actions/checkout@v1      - name: Use node ${{ matrix.node }}
+      - uses: actions/checkout@v1      
+      - name: Use node ${{ matrix.node }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
