--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,8 +19,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
-          registry-url: https://registry.npmjs.org      - name: install
-        run: npm install      - name: lint
-        run: npm run lint      - name: build
-        run: npm run build      - name: test
+          registry-url: https://registry.npmjs.org      
+      - name: install
+        run: npm install      
+      - name: lint
+        run: npm run lint      
+      - name: build
+        run: npm run build      
+      - name: test
         run: npm test
