--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: CI
+name: API TEST
 
 on: [push]
 
@@ -13,18 +13,11 @@ jobs:
         node: [8, 10, 12]
         os: [ubuntu-latest, macOS-latest, windows-latest]
 
-    steps:
-      - uses: actions/checkout@v1      
-      - name: Use node ${{ matrix.node }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-          registry-url: https://registry.npmjs.org      
-      - name: install
-        run: npm install      
-      - name: lint
-        run: npm run lint      
-      - name: build
-        run: npm run build      
-      - name: test
-        run: npm test
+     steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Install dependencies and run test
+        run: |
+          npm install
+          npm run test     
+      
