--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,14 +4,7 @@ on: [push]
 
 jobs:
   test:
-    name: Test on node ${{ matrix.node }} and ${{ matrix.os }}
-
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        node: [8, 10, 12]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+    name: Run Unit Test
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
