Install dependencies and remove it v14

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,14 @@ on: [push]
 
 jobs:
   test:
-    name: Run Unit Test
+    name: Test on node ${{ matrix.node }} and ${{ matrix.os }}
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        node: [12]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
